--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <title>Portfolio - Léo Doray</title>
 </head>
 
-<body class="bg-background">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
