--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="portfolio léo doray" content="Portfolio Web de Léo Doray" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Portfolio - Léo Doray</title>
 </head>
 
