animation/hover ok

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,22 @@
   <meta name="portfolio léo doray" content="Portfolio Web de Léo Doray" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- AOS animate  -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  
   <title>Portfolio - Léo Doray</title>
 </head>
 
 <body>
   <div id="root"></div>
+
+  <!-- AOS animate  -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: true,
+    });
+  </script>
 </body>
 
 </html>
